--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
     </dependencies>
@@ -350,7 +350,7 @@
                                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                     <tableColumns>
                                                         <tableColumn width="184.7109375" minWidth="40" maxWidth="1000" id="fZm-TB-kfy">
-                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -363,11 +363,11 @@
                                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                             <prototypeCellViews>
                                                                 <tableCellView id="FEl-7x-Wqd">
-                                                                    <rect key="frame" x="1" y="19" width="185" height="17"/>
+                                                                    <rect key="frame" x="1" y="1" width="185" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
-                                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uo9-9m-F1F">
-                                                                            <rect key="frame" x="3" y="0.0" width="17" height="17"/>
+                                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uo9-9m-F1F">
+                                                                            <rect key="frame" x="0.0" y="3" width="14" height="14"/>
                                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" image="NSActionTemplate" id="Kie-eN-aeL">
                                                                                 <connections>
                                                                                     <binding destination="FEl-7x-Wqd" name="value" keyPath="objectValue.image" id="TNC-i2-uCt"/>
@@ -377,9 +377,9 @@
                                                                                 <binding destination="FEl-7x-Wqd" name="value" keyPath="objectValue.image" id="qqT-0R-qpC"/>
                                                                             </connections>
                                                                         </imageView>
-                                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAt-Hc-87n">
-                                                                            <rect key="frame" x="21" y="-1" width="105" height="17"/>
-                                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Name" id="eTq-dT-GBq">
+                                                                        <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAt-Hc-87n">
+                                                                            <rect key="frame" x="12" y="3" width="175" height="14"/>
+                                                                            <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" title="Name" id="eTq-dT-GBq">
                                                                                 <font key="font" metaFont="smallSystem"/>
                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -390,6 +390,13 @@
                                                                             </connections>
                                                                         </textField>
                                                                     </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstItem="SAt-Hc-87n" firstAttribute="leading" secondItem="Uo9-9m-F1F" secondAttribute="trailing" id="78m-x2-SlI"/>
+                                                                        <constraint firstItem="Uo9-9m-F1F" firstAttribute="leading" secondItem="FEl-7x-Wqd" secondAttribute="leading" id="KuE-sF-Ah6"/>
+                                                                        <constraint firstItem="Uo9-9m-F1F" firstAttribute="top" secondItem="FEl-7x-Wqd" secondAttribute="top" id="f8I-qH-734"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="SAt-Hc-87n" secondAttribute="trailing" id="mbv-5D-hth"/>
+                                                                        <constraint firstItem="Uo9-9m-F1F" firstAttribute="centerY" secondItem="SAt-Hc-87n" secondAttribute="centerY" id="q2h-KG-RFk"/>
+                                                                    </constraints>
                                                                     <connections>
                                                                         <outlet property="imageView" destination="Uo9-9m-F1F" id="gCM-lm-E3e"/>
                                                                         <outlet property="textField" destination="SAt-Hc-87n" id="8Ue-mb-KBY"/>
@@ -409,7 +416,7 @@
                                             <rect key="frame" x="1" y="119" width="223" height="15"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Rq9-QH-Swl">
+                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="Rq9-QH-Swl">
                                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
